--- a/client/src/components/addsong.css
+++ b/client/src/components/addsong.css
@@ -133,6 +133,10 @@ input[type="number"]::-webkit-inner-spin-button {
   background-color: rgb(233, 233, 233);
 }
 
+.drop-container-background.true{
+  border: 1px solid rgb(255, 41, 41);
+}
+
 .drop-container-background:hover,
 .drop-container:hover {
   background-color: rgb(241, 241, 241);
