--- a/client/src/components/navigation.css
+++ b/client/src/components/navigation.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap");
 
 header {
+  user-select: none;
   z-index: 10;
   position: fixed;
   width: 100%;
   height: 5rem;
   background: linear-gradient(0deg, rgb(255, 255, 255) 0%, #cacaca 100%);
+  backdrop-filter: blur(10px);
 }
 
 .nav-container {
+
   width: 1280px;
   margin: auto;
 }
@@ -126,6 +129,9 @@ header {
     flex-direction: row;
     justify-content: space-between;
   }
+  .pages-nav.ham{
+    margin-top: .43rem;
+  }
   .pages-nav {
     display: flex;
     flex-direction: column;
@@ -144,7 +150,8 @@ header {
     display: none;
   }
   .pages-nav.ham.dark {
-    background: linear-gradient(180deg, rgb(23, 26, 29) 0%, rgb(34, 36, 39) 100%);
+    /* background: linear-gradient(180deg, rgb(23, 26, 29) 0%, rgb(34, 36, 39) 100%); */
+    background: rgba(0, 0, 0, 0.925);
     color: white;
     transition: 0.2s ease-in-out;
   }
@@ -154,5 +161,4 @@ header {
   .pages-nav.ham {
     display: none;
   }
-  
 }
