--- a/client/src/pages/Backgrounds/components/bg.css
+++ b/client/src/pages/Backgrounds/components/bg.css
@@ -47,3 +47,23 @@
   transform: scale(1.1);
   transition: 0.2s ease-in-out;
 }
+
+.actions-bg {
+  display: flex;
+  gap: 1rem;
+}
+
+.actions-bg button {
+  color: white;
+  cursor: pointer;
+  border: none;
+  background-color: red;
+  font-size: 0.8rem;
+  padding: 0.3rem;
+  transition: 0.2s ease-in-out;
+}
+
+.actions-bg button:hover {
+  background-color: rgb(184, 0, 0);
+  transition: 0.2s ease-in-out;
+}
