--- a/client/src/pages/Song/components/deleted-info.css
+++ b/client/src/pages/Song/components/deleted-info.css
@@ -1,32 +1,18 @@
 .deleted-info-container {
   position: relative;
-  padding: 3rem;
+  padding: 5rem 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* .deleted-info-container::before {
-  content: "";
-  background-image: var(--art);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  filter: brightness(7%);
-}
- */
 .deleted-wrapper {
-  /* width: 1300px; */
   position: relative;
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .deleted-wrapper .deleted-artwork {
@@ -57,12 +43,12 @@
 
 .deleted-wrapper .deleted-artwork img {
   box-shadow: rgba(0, 0, 0, 0.712) 0px 5px 15px;
-  width: 100%;
   max-width: 400px;
+  width: 100%;
 }
 
 .deleted-wrapper .info-wrapper {
-  padding: 5rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -71,8 +57,11 @@
 .deleted-wrapper .info-wrapper {
   max-width: 1000px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  color: rgb(202, 202, 202);
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(var(--auto-grid-min-size), 1fr)
+  );
+  gap: 1rem;
 }
 
 .deleted-wrapper .info-wrapper h1 {
@@ -92,9 +81,3 @@
   color: white;
   font-weight: 700;
 }
-
-/* @media screen and (max-width: 600px) {
-    .deleted-wrapper .deleted-artwork img{
-        width: 100%
-     }
-} */
