--- a/client/src/pages/Song/deleted-song.css
+++ b/client/src/pages/Song/deleted-song.css
@@ -3,36 +3,13 @@
   color: white;
 }
 
-.back-btn {
-  align-self: flex-start;
-  display: flex;
-  align-items: center;
-  gap: .5rem;
-  cursor: pointer;
-  width: fit-content;
-  padding: 0.5rem;
-  position: relative;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.329);
-  border: 1px solid white;
-  transition: 0.2s ease-in-out;
-}
-
-.back-btn:hover {
-  transition: 0.2s ease-in-out;
-  border: 1px solid rgb(0, 0, 0);
-  color: black;
-  background-color: rgb(255, 255, 255);
-}
-
 .video {
-  /* padding: 0rem; */
   margin: auto;
   position: relative;
 }
 
 .video-container {
-  padding: 2rem;
+  padding: 1rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -97,6 +74,7 @@
 
 .original-info .info {
   width: 100%;
+  font-size: .9rem;
   font-weight: 700;
   display: flex;
   flex-direction: column;
