--- a/client/src/pages/songs.css
+++ b/client/src/pages/songs.css
@@ -1,5 +1,5 @@
 .songs-wrapper {
-  --auto-grid-min-size: 20rem;
+  --auto-grid-min-size: 18rem;
   display: grid;
   grid-template-columns: repeat(
     auto-fill,
@@ -8,24 +8,106 @@
   gap: 1rem;
 }
 
-.songs-container{
-  background-color: white;
-  padding: 2.5rem;
+.main-content-songs {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-.add-new{
+.songs-container {
   background-color: white;
-  font-size: .9rem;
+}
+
+.add-new {
+  width: fit-content;
+  background-color: white;
+  font-size: 0.9rem;
   color: black;
-  padding: .5rem;
+  padding: 0.5rem;
   border: 1px solid;
-  margin-bottom: 1rem;
   transition: 0.2s ease-in-out;
   cursor: pointer;
 }
 
-.add-new:hover{
+.add-new:hover {
   background-color: rgb(0, 0, 0);
   color: white;
+  transition: 0.2s ease-in-out;
+}
+
+.featured-song-container::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  content: "";
+  background-image: url("https://res.cloudinary.com/dikp1fayh/image/upload/v1681423383/artworks/bj47nqc9mxhdt7nmpfaf.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(15%) blur(2.5px);
+}
+
+.featured-song-container {
+  position: relative;
+}
+
+.featured-song {
+  position: relative;
+  max-width: 700px;
+  padding: 1rem 0rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.featured-song img {
+  margin: 0 auto;
+  max-width: 250px;
+  width: 100%;
+}
+
+.featured-song .info {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.featured-song .info p {
+  font-size: 0.8rem;
+  color: rgb(218, 218, 218);
+}
+
+.featured-song .info .data {
+  color: white;
+}
+
+.featured-song .info .data h5 {
+  color: rgba(218, 218, 218, 0.664);
+  font-weight: 500;
+}
+
+.featured-song .info .link-btn a {
+  font-size: 0.8rem;
+  text-decoration: none;
+  width: fit-content;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  background: none;
+  color: white;
+  border: 1px solid white;
+  padding: 0.5rem;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.featured-song .info .link-btn a:hover {
+  color: black;
+  background-color: white;
   transition: 0.2s ease-in-out;
 }
