--- a/client/src/pages/Backgrounds/backgrounds.css
+++ b/client/src/pages/Backgrounds/backgrounds.css
@@ -3,15 +3,18 @@
   min-height: 100%;
   height: auto !important;
   padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .backgrounds-container .add-bg{
+  width: fit-content;
   background-color: white;
   font-size: .9rem;
   color: black;
   padding: .5rem;
   border: 1px solid;
-  margin-bottom: 1rem;
   transition: 0.2s ease-in-out;
   cursor: pointer;
 }
