--- a/client/src/components/navigation.css
+++ b/client/src/components/navigation.css
@@ -36,6 +36,9 @@ header {
   font-weight: 800;
   padding: 0.5rem;
   transition: 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  gap: .5rem;
 }
 
 .log-out {
@@ -127,9 +130,6 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-  .pages-nav.ham{
-    margin-top: .43rem;
   }
   .pages-nav {
     display: flex;
