--- a/client/src/context/theme/forms.css
+++ b/client/src/context/theme/forms.css
@@ -13,10 +13,21 @@
   background-color: rgb(10, 10, 10);
 }
 
-.form-container.dark form input[type="text"]:not(:placeholder-shown),
+.form-container.dark input:not([type="submit"]):not(:placeholder-shown),
 .description-input.dark:not(:placeholder-shown),
 .tracks-inputs.dark input[type="text"]:not(:placeholder-shown) {
   border-bottom: 1px solid rgb(175, 29, 29);
+}
+
+.form-container.dark form input[type=time],.form-container.dark form input[type=date] {
+  text-align: left;
+  color: white;
+}
+
+.form-container.dark form input[type="time"]:before, .form-container.dark form input[type="date"]:before {
+  color: #6d6d6d;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
 }
 
 .artists-input.dark button,
