--- a/client/src/pages/HigherOrLower/higherorlower.css
+++ b/client/src/pages/HigherOrLower/higherorlower.css
@@ -112,7 +112,7 @@
   justify-content: center;
   gap: 0.5rem;
   max-width: 90px;
-  font-size: 1rem;
+  font-size: .9rem;
   outline: none;
   background: none;
   padding: 0.5rem 4rem;
@@ -158,6 +158,10 @@
   height: 100%;
 }
 
+.next-content .buttons-high-low p {
+  font-size: 0.9rem;
+}
+
 @media screen and (max-width: 1100px) {
   .gameState {
     width: 70px;
@@ -166,16 +170,13 @@
     margin-left: -35px;
     font-size: 1.5rem;
   }
+  .gameState img {
+    width: 80%;
+    height: 80%;
+  }
 }
 
 @media screen and (max-width: 891px) {
-  /* .gameState{
-    width: 70px;
-    height: 70px;
-    margin-top: -35px;
-    margin-left: -35px;
-    font-size: 1.5rem;
-  } */
   .gameState {
     width: 50px;
     height: 50px;
@@ -213,16 +214,24 @@
   .next-content .artists-list {
     margin-bottom: 1rem;
   }
-  .next-content button{
-    padding: .4rem 3rem;
-    font-size: .9rem;
+  .next-content button {
+    padding: 0.4rem 3rem;
+    font-size: 0.9rem;
   }
-  .high-low-container .score{
-    font-size: .8rem;
-    padding: .5rem;
+  .high-low-container .score {
+    font-size: 0.8rem;
+    padding: 0.5rem;
     left: 0;
   }
-  .next-content .buttons-high-low p{
-    font-size: .9rem;
+  .next-content .buttons-high-low p {
+    font-size: 0.9rem;
+  }
+  .gameState img {
+    width: 80%;
+    height: 80%;
+  }
+  .current-content .info,
+  .next-content .info {
+    align-self: center;
   }
 }
