added progress tracking for upload of backgrounds

--- a/client/src/pages/Backgrounds/components/bg.css
+++ b/client/src/pages/Backgrounds/components/bg.css
@@ -48,6 +48,52 @@
   transition: 0.2s ease-in-out;
 }
 
+.skeleton-bg{
+  aspect-ratio: 16/9;
+  margin: auto;
+  object-fit: cover;
+  min-height: 100%;
+  width: 100%;
+  transition: 0.2s ease-in-out;
+  position: relative;
+  animation: opacity 1.5s alternate infinite;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 50%;
+  }
+  100%{
+    opacity: 100%;
+  }
+}
+
+.progress-text{
+  user-select: none;
+  font-weight: 500;
+  z-index: 8;
+  color: white;
+  background-color: rgb(66, 66, 66);
+  width: fit-content;
+  padding: .3rem;
+  font-size: 1rem;
+}
+
+.progress-text-server{
+  user-select: none;
+  font-weight: 500;
+  z-index: 8;
+  color: rgb(0, 53, 3);
+  width: fit-content;
+  padding: .3rem;
+  font-size: .8rem;
+}
+
+.progress-container{
+  display: flex;
+  align-items: flex-end;
+}
+
 .actions-bg {
   display: flex;
   gap: 1rem;
