--- a/client/src/pages/Songs/components/filters.css
+++ b/client/src/pages/Songs/components/filters.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   gap: 1rem;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .filter-container {
@@ -55,7 +56,8 @@
 
 .input-search {
   background-color: rgb(255, 255, 255);
-  max-width: 300px;
+  max-width: 350px;
+  width: 100%;
   padding: 0.3rem;
   display: flex;
   align-items: center;
