--- a/client/src/pages/Song/components/background-info.css
+++ b/client/src/pages/Song/components/background-info.css
@@ -41,7 +41,7 @@
   gap: 1rem;
 }
 
-.background-container .background-wrapper .download-bg {
+/* .background-container .background-wrapper .download-bg {
   max-width: fit-content;
   font-size: 0.9rem;
   display: flex;
@@ -60,11 +60,10 @@
   background-color: white;
   color: black;
   transition: 0.2s ease-in-out;
-}
+} */
 
 .background-container .background-wrapper img {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
   max-width: 500px;
   width: 100%;
 }
