--- a/client/src/pages/Songs/components/song.css
+++ b/client/src/pages/Songs/components/song.css
@@ -10,17 +10,24 @@
 
 .song.true {
   position: relative;
-  opacity: 0.5;
+  animation: opacity 1.5s alternate infinite;
 }
 
 .song.true::before {
   content: "";
-  background-color: rgba(201, 201, 201, 0.596);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.song.dark.true::before {
+  background-color: rgba(83, 83, 83, 0.596);
+}
+
+.song.true::before {
+  background-color: rgba(163, 163, 163, 0.596);
 }
 
 .song-wrapper {
@@ -44,7 +51,7 @@
   transition: 0.2s ease-in-out;
 }
 
-.artwork .skeleton-img{
+.artwork .skeleton-img {
   animation: opacity 2s alternate infinite;
 }
 
@@ -57,16 +64,15 @@
   font-size: 1rem;
 }
 
-
 /*INFO*/
 
 .song-info {
   display: flex;
   flex-direction: column;
-  gap: .1rem;  
+  gap: 0.1rem;
 }
 
-.song-container p{
+.song-container p {
   font-size: 0.85rem;
   font-weight: 500;
 }
@@ -105,32 +111,35 @@
   gap: 0.5rem;
 }
 
-
 /*SKELETON DIVS*/
-.song-info .song-name.skeleton{
+.song-info .song-name.skeleton {
   height: 15px;
-
 }
 
-.song-info .song-name.skeleton, .song-info .artist-name.skeleton, .song-info .song-genre.skeleton, .song-upload-date.skeleton,.song-views.skeleton, .song-info .song-status.skeleton{
+.song-info .song-name.skeleton,
+.song-info .artist-name.skeleton,
+.song-info .song-genre.skeleton,
+.song-upload-date.skeleton,
+.song-views.skeleton,
+.song-info .song-status.skeleton {
   background-color: rgb(170, 170, 170);
   width: 100%;
   animation: opacity 2s alternate infinite;
 }
-.song-info .artist-name.skeleton{
+.song-info .artist-name.skeleton {
   height: 12px;
-  margin-bottom: .8rem;
+  margin-bottom: 0.8rem;
 }
-.song-info .song-genre.skeleton, .song-views.skeleton, .song-upload-date.skeleton{
+.song-info .song-genre.skeleton,
+.song-views.skeleton,
+.song-upload-date.skeleton {
   height: 15px;
-  margin: .1rem 0rem;
+  margin: 0.1rem 0rem;
 }
-.song-info .song-status.skeleton{
+.song-info .song-status.skeleton {
   margin-top: 1rem;
   height: 20px;
 }
-
-
 
 .actions {
   margin-top: 1rem;
