--- a/client/src/components/navigation.css
+++ b/client/src/components/navigation.css
@@ -6,8 +6,12 @@ header {
   position: fixed;
   width: 100%;
   height: 4.5rem;
+  font-weight: 600;
   background: linear-gradient(0deg, rgb(255, 255, 255) 0%, #cacaca 100%);
   backdrop-filter: blur(10px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-container {
@@ -33,7 +37,6 @@ header {
   color: black;
   text-decoration: none;
   font-family: "Inter";
-  font-weight: 800;
   padding: 0.5rem;
   transition: 0.3s ease-in-out;
   display: flex;
@@ -45,7 +48,6 @@ header {
   border: 1px solid black;
   padding: 0.5rem;
   font-family: "Inter";
-  font-weight: 800;
   color: white;
   background-color: black;
   cursor: pointer;
@@ -75,8 +77,10 @@ header {
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  margin-top: .1rem;
+  padding: 0;
+  width: 45px;
+  height: 20px;
   color: black;
   user-select: none;
 }
@@ -84,7 +88,7 @@ header {
 .pages-nav {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
 }
 
@@ -95,13 +99,16 @@ header {
 .auth-links {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 1200px) {
-  /* .pages-nav.desktop{
-    display: none;
-  } */
+  .hamburger-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
   .pages-nav.desktop {
     display: none;
   }
@@ -158,6 +165,9 @@ header {
 
 @media screen and (min-width: 1199px) {
   .pages-nav.ham {
+    display: none;
+  }
+  .hamburger-container{
     display: none;
   }
 }
