--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,23 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+
+
+html::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #181818;
+}
+
+html::-webkit-scrollbar {
+  width: 8px;
+  background-color: #181818;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #cccccc;
+}
