--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -7,8 +7,8 @@
 }
 
 .login-container{
+    min-height: 100vh;
     margin: 0 auto;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
