--- a/client/src/pages/Song/components/background-info.css
+++ b/client/src/pages/Song/components/background-info.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   background-image: var(--bg);
-  filter: blur(5px) brightness(20%);
+  filter: brightness(10%);
 }
 
 .background-section h1 {
