--- a/client/src/pages/Songs/components/song.css
+++ b/client/src/pages/Songs/components/song.css
@@ -82,33 +82,48 @@
   color: #a3a3a3;
 }
 
-.song-upload-date {
-  margin-bottom: 1.5rem;
-}
-
-.song-status.Deleted {
-  font-size: 1rem;
-  color: red;
-}
-
-.song-status.Private {
-  color: rgb(147, 157, 201);
-  font-size: 1rem;
-}
-
-.song-info h3 span {
-  font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
 .song-genre {
   margin-top: 1rem;
   margin-right: 1rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.song-last-row {
+  margin-top: 1rem;
+  display: flex;
+}
+
+.song-upload-date {
+  padding: 0.2rem;
+  color: white;
+  background-color: rgb(61, 61, 61);
+  width: fit-content;
+  text-align: right;
+  align-self: right;
+  margin: 0 0 0 auto;
+}
+
+.song-last-row .song-status {
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+
+.song-status.Deleted {
+  padding: 0.2rem;
+  font-size: 0.8rem;
+  color: white;
+  background-color: rgb(214, 0, 0);
+}
+
+.song-status.Private {
+  color: white;
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  background-color: rgb(86, 92, 119);
 }
 
 /*SKELETON DIVS*/
