--- a/client/src/pages/Songs/songs.css
+++ b/client/src/pages/Songs/songs.css
@@ -1,46 +1,6 @@
-.songs-wrapper {
-  --auto-grid-min-size: 18rem;
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(var(--auto-grid-min-size), 1fr)
-  );
-  gap: 1rem;
-}
-
-.main-content-songs {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.songs-container {
-  padding-top: 75px;
-  min-height: 100%;
-  height: auto !important;
-  background-color: white;
-}
-
-.add-new {
-  width: fit-content;
-  background-color: white;
-  font-size: 0.9rem;
-  color: black;
-  padding: 0.5rem;
-  border: 1px solid;
-  transition: 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.add-new:hover {
-  background-color: rgb(0, 0, 0);
-  color: white;
-  transition: 0.2s ease-in-out;
-}
-
 .featured-song-container::before {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   top: 0;
   left: 0;
@@ -49,32 +9,46 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  filter: brightness(15%) blur(2.5px);
+  filter: brightness(10%) blur(1px);
 }
 
 .featured-song-container {
+  width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.featured-song-wrapper {
+  justify-content: space-between;
+  position: relative;
+  max-width: 1600px;
+  width: 100%;
+  padding: 1rem;
 }
 
 .featured-song {
-  position: relative;
-  max-width: 700px;
-  padding: 1rem 0rem;
+  max-width: 500px;
   display: flex;
+  flex-direction: row;
+  align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   gap: 1rem;
 }
 
+@media screen and (max-width: 462px) {
+  .featured-song {
+    justify-content: center;
+  }
+}
+
 .featured-song img {
-  margin: 0 auto;
   max-width: 250px;
   width: 100%;
 }
 
 .featured-song .info {
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -113,4 +87,61 @@
   color: black;
   background-color: white;
   transition: 0.2s ease-in-out;
+}
+
+.songs-container main {
+  width: 100%;
+  max-width: 1600px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.songs-container {
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  padding-top: 70px;
+  justify-content: center;
+  align-items: center;
+}
+
+.songs-wrapper {
+  --auto-grid-min-size: 18rem;
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(var(--auto-grid-min-size), 1fr)
+  );
+  gap: 1rem;
+  padding-bottom: 3rem;
+}
+
+.add-new {
+  width: fit-content;
+  background-color: white;
+  font-size: 0.9rem;
+  color: black;
+  padding: 0.5rem;
+  border: 1px solid;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.add-new:hover {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  transition: 0.2s ease-in-out;
+}
+
+.songs-title {
+  user-select: none;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.songs-title h4 {
+  font-weight: 500;
 }
