--- a/client/src/pages/Backgrounds/SinglePage/single-bg.css
+++ b/client/src/pages/Backgrounds/SinglePage/single-bg.css
@@ -81,8 +81,8 @@
 .bg-tracks-container {
   width: 100%;
   max-height: 350px;
-  height: 100%;
   display: grid;
+  grid-auto-rows: 1fr;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   overflow-y: scroll;
   position: relative;
@@ -106,11 +106,15 @@
 }
 
 @media screen and (max-width: 1147px) {
+  .single-bg-container {
+    padding-top: 5rem;
+    overflow-y: auto;
+  }
   .button-align {
     margin-top: 2rem;
   }
   .single-bg-wrapper {
-    margin-top: 2rem;
+    margin-top: 0rem;
     flex-direction: column;
     justify-content: center;
   }
