--- a/client/src/pages/AddSong/addsong.css
+++ b/client/src/pages/AddSong/addsong.css
@@ -1,3 +1,68 @@
+.form-container input[type="submit"]:hover {
+  color: white;
+  background-color: black;
+  transition: 0.2s ease-in-out;
+}
+
+.form-container input:not([type="submit"]):focus,
+textarea:focus {
+  background-color: rgb(237, 253, 255);
+  border-bottom: 1px solid rgb(22, 247, 255);
+  transition: 0.2s ease-in-out;
+}
+
+.form-container form{
+  max-width: 500px;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.row-1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.artists-inputs {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.remove {
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
+  position: absolute;
+  top: 9px;
+  right: 10px;
+}
+
+.add-artist {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+  border: 1px solid black;
+  color: black;
+  padding: 0.4rem 0.8rem;
+  background-color: white;
+  transition: 0.2s ease-in-out;
+}
+
+.add-artist:hover {
+  color: rgb(255, 255, 255);
+  background-color: black;
+  transition: 0.2s ease-in-out;
+}
+
 input[type="date"] {
   outline: none;
 }
@@ -41,8 +106,6 @@ input[type="number"]::-webkit-inner-spin-button {
   padding: 2.5rem;
   user-select: none;
 }
-
-/* inputs */
 
 .form-container input {
   width: 100%;
