changed api url

--- a/client/src/pages/Songs/songs.css
+++ b/client/src/pages/Songs/songs.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   content: "";
-  background-image: url("https://res.cloudinary.com/dikp1fayh/image/upload/v1681423383/artworks/bj47nqc9mxhdt7nmpfaf.jpg");
+  background-image: url("https://i1.sndcdn.com/artworks-000085438916-dd1u8z-t500x500.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
