--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
 
 html::-webkit-scrollbar-track {
   border-radius: 10px;
