--- a/client/src/pages/HomePage/dark_theme.css
+++ b/client/src/pages/HomePage/dark_theme.css
@@ -3,5 +3,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
+  .separator {
+    width: 80%;
+    height: 2px;
+    background: radial-gradient(
+      circle,
+      rgb(0, 0, 0) 0%,
+      rgba(15, 15, 19, 0) 100%
+    );
+  }
 }
 
