--- a/client/src/pages/HomePage/sections/documentary.css
+++ b/client/src/pages/HomePage/sections/documentary.css
@@ -1,82 +1,114 @@
+.back-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  overflow-y: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: brightness(10%) grayscale(10%);
+  background-color: rgba(0, 0, 0, 0.98);
+}
+
+.documentary-container::before {
+  background: radial-gradient(circle, rgba(20, 22, 27, 0.233) 0%, #070707 100%);
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .documentary-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .documentary-wrapper {
+  position: relative;
+  color: white;
+
+  .documentary-wrapper{
     margin: 0 auto;
     justify-content: space-between;
     max-width: 1500px;
     padding: 5rem 2rem;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 2rem;
+    position: relative;
+    z-index: 2;
   }
-  
-  .documentary-wrapper .info-wrapper {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 640px;
+}
+
+.documentary-wrapper .info-wrapper {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 640px;
+  >label{
+    letter-spacing: .3rem;
+    font-size: .8rem;
   }
-  
-  .documentary-wrapper .info-wrapper p {
+  > p {
     margin-bottom: 1.5rem;
   }
-  
-  .documentary-wrapper .info-wrapper h1 {
+  >h1 {
     font-size: 2.5rem;
   }
-  
-  .documentary-wrapper .info-wrapper h3 {
+  >h3 {
     font-weight: 500;
     font-size: 1.3rem;
     padding-bottom: 1.5rem;
   }
-  
-  .documentary-wrapper .info-wrapper .watch-btn {
-    cursor: pointer;
-    font-size: 0.9rem;
-    padding: 0.6rem;
-    border: 1px solid rgb(255, 255, 255);
-    background-color: rgb(253, 41, 41);
-    transition: 0.2s ease-in-out;
-    text-decoration: none;
-    color: white;
-  }
-  
-  .documentary-wrapper .info-wrapper .watch-btn:hover {
-    transition: 0.2s ease-in-out;
-    background-color: rgb(196, 0, 0);
-  }
-  
+}
+
+.documentary-wrapper .info-wrapper .watch-btn {
+  cursor: pointer;
+  font-size: 0.9rem;
+  padding: 0.6rem;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(253, 41, 41);
+  transition: 0.2s ease-in-out;
+  text-decoration: none;
+  color: white;
+}
+
+.documentary-wrapper .info-wrapper .watch-btn:hover {
+  transition: 0.2s ease-in-out;
+  background-color: rgb(196, 0, 0);
+}
+
+.doc-player {
+  width: 960px;
+  height: 540px;
+}
+
+.doc-video-container {
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1020px) {
   .doc-player {
-    width: 640px;
-    height: 360px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
-  
+
+  .doc-player-wrapper {
+    position: relative;
+    padding-top: 56.25%;
+  }
+
   .doc-video-container {
-    margin: 0 auto;
+    width: 100%;
   }
-  
-  @media screen and (max-width: 748px) {
-    .doc-player {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-  
-    .doc-player-wrapper {
-      position: relative;
-      padding-top: 56.25%;
-    }
-  
-    .doc-video-container {
-      width: 100%;
-    }
-  }
-  
+}
+
+.documentary-container.dark {
+  background: radial-gradient(circle, rgb(10, 10, 12) 0%, rgb(15, 15, 19) 100%);
+}
