--- a/client/src/pages/HomePage/sections/engagement.css
+++ b/client/src/pages/HomePage/sections/engagement.css
@@ -1,19 +1,93 @@
 .engagement {
-  min-height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3rem 0rem;
-  position: relative;
- /*  background: radial-gradient(circle, rgb(20, 22, 27) 0%, #0a0b0d 100%); */
+  padding: 3rem 1rem;
+  gap: 4rem;
+  /*  background: radial-gradient(circle, rgb(20, 22, 27) 0%, #0a0b0d 100%); */
   width: 100%;
-  .wrapper{
-    background-color: rgba(0, 0, 0, 0.288);
-    border-radius: 15px;
-    padding: 5rem;
-      > p {
-        color: rgb(184, 184, 184);
+
+  > a {
+    background-color: #b8b7ff;
+    color: black;
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.5rem 1.5rem;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+
+    &:hover {
+      background-color: #8684ff;
+      transition: 0.2s ease-in-out;
+    }
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    > h1 {
+      font-size: 2.5rem;
+      text-align: center;
+    }
+    >label{
+      letter-spacing: .3rem;
+      font-size: .8rem;
+    }
+  }
+
+  .perks {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 2rem;
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+    .row {
+      user-select: none;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1.5rem;
+      background: #cbcaff;
+      border-radius: 10px;
+      transition: 0.2s ease-in-out;
+      &:hover{
+        transition: 0.2s ease-in-out;
+        transform: scale(1.05);
       }
+      > h3 {
+        font-weight: 500;
+        font-size: 1.1rem;
+      }
+      > svg {
+        width: 2rem;
+        height: 2rem;
+      }
+      > p {
+        font-size: 0.85rem;
+        font-weight: 500;
+        color: rgb(41, 41, 41);
+      }
+    }
+  }
+}
+
+.engagement.dark{
+  background: radial-gradient(circle, rgb(10, 10, 12) 0%, rgb(3, 3, 3) 100%);
+  .perks .row{
+    background: linear-gradient(180deg, #24262c 0%, #24262c3f 100%);
+    >p{
+      color: rgb(214, 214, 214);
+    }
   }
 }
