--- a/client/src/pages/HomePage/sections/engagement.css
+++ b/client/src/pages/HomePage/sections/engagement.css
@@ -5,7 +5,8 @@
   align-items: center;
   padding: 3rem 1rem;
   gap: 4rem;
-  /*  background: radial-gradient(circle, rgb(20, 22, 27) 0%, #0a0b0d 100%); */
+  min-height: 600px;
+   /* background: radial-gradient(circle, rgb(20, 22, 27) 0%, #0a0b0d 100%); */
   width: 100%;
 
   > a {
@@ -34,7 +35,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
     > h1 {
       font-size: 2.5rem;
       text-align: center;
@@ -75,7 +75,7 @@
       }
       > p {
         font-size: 0.85rem;
-        font-weight: 500;
+        font-weight: 400;
         color: rgb(41, 41, 41);
       }
     }
@@ -83,7 +83,7 @@
 }
 
 .engagement.dark{
-  background: radial-gradient(circle, rgb(10, 10, 12) 0%, rgb(3, 3, 3) 100%);
+  background: radial-gradient(circle, rgb(15, 15, 19) 0%, rgb(10, 10, 10) 100%);
   .perks .row{
     background: linear-gradient(180deg, #24262c 0%, #24262c3f 100%);
     >p{
