--- a/client/src/pages/Backgrounds/components/bg.css
+++ b/client/src/pages/Backgrounds/components/bg.css
@@ -34,14 +34,12 @@
   overflow: hidden;
   margin: 0 auto;
   aspect-ratio: 16/9;
-  /* width: 100%;
-    height: 250px; */
+  width: 100%;
 }
 .bg-image-wrapper img {
   aspect-ratio: 16/9;
   margin: auto;
   object-fit: cover;
-  min-height: 100%;
   width: 100%;
   transition: 0.2s ease-in-out;
 }
