--- a/client/src/pages/HomePage/home-page.css
+++ b/client/src/pages/HomePage/home-page.css
@@ -7,18 +7,21 @@ main {
   height: auto !important;
 }
 
-.home-page{
-  .topics{
+.home-page {
+  .topics {
 
-    .separator{
+    .separator {
+      align-self: center;
+      margin: 0 auto;
+      width: 80%;
+      height: 2px;
       background: radial-gradient(
         circle,
-        rgb(238, 238, 238) 0%,
+        rgb(0, 0, 0) 0%,
         rgba(15, 15, 19, 0) 100%
       );
     }
   }
-  
 }
 
 .main-content {
@@ -164,10 +167,10 @@ main {
         bottom: 0;
         position: relative;
       }
-      .logos{
+      .logos {
         flex-wrap: wrap;
-        >img{
-        margin: 0 auto;
+        > img {
+          margin: 0 auto;
         }
       }
     }
@@ -212,5 +215,3 @@ main {
     opacity: 100;
   }
 }
-
-
