--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -15,18 +15,12 @@
     justify-content: center;
 }
 
-.login-container form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-}
-
 .text-field{
     width: 100%;
     height: 60px;
     border-radius: 5px;
     position: relative;
+    transition: 0.2s ease-in-out;
 }
 
 .text-field.light{
@@ -43,7 +37,7 @@
     color: black;
     font-size: .8rem;
     transition: all 0.1s ease-in-out;
-    padding-bottom: -30px
+    padding-bottom: -50px
 }
 
 .text-field label {
@@ -68,6 +62,12 @@
     color: rgba(255, 0, 0, 0);
 }
 
+.text-field.error{
+    background-color: rgba(255, 30, 30, 0.096);
+    border: 1px solid red;
+    transition: 0.2s ease-in-out;
+}
+
 .login-btn {
     border-radius: .2rem;
     outline: none;
@@ -79,6 +79,7 @@
     padding: .7rem 3rem;
     border: 1.5px solid rgba(0, 0, 0, 0);
     transition: 0.2s ease-in-out;
+    width: 100%;
 }
 
 .login-btn:hover {
@@ -86,6 +87,13 @@
     color: black;
     border: 1.5px solid black;
     transition: 0.2s ease-in-out;
+}
+
+.auth-error{
+    margin-top: 1rem;
+    font-size: .9rem;
+    font-weight: 500;
+    color: rgb(255, 29, 29);
 }
 
 
