--- a/client/src/pages/SignUp/signup.css
+++ b/client/src/pages/SignUp/signup.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 2.5rem;
 }
 
 .text-field{
@@ -76,6 +76,7 @@
     padding: .7rem 3rem;
     border: 1.5px solid rgba(0, 0, 0, 0);
     transition: 0.2s ease-in-out;
+    border-radius: 10px;
 }
 
 .login-btn:hover {
