--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,18 +6,37 @@
   box-sizing: border-box;
 }
 
-html::-webkit-scrollbar-track {
+
+.routes-container{
+  height: 100%;
+  overflow: auto;
+}
+
+.routes-container::-webkit-scrollbar-track {
   border-radius: 10px;
-  background-color: #181818;
+  background-color: #ffffff8a;
 }
 
-html::-webkit-scrollbar {
+.routes-container::-webkit-scrollbar {
   width: 8px;
+  background-color: #ffffff;
+}
+
+.routes-container::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #0e0e0e;
+}
+
+.routes-container.dark::-webkit-scrollbar-track {
+  background-color: #1818188a;
+}
+
+.routes-container.dark::-webkit-scrollbar {
   background-color: #181818;
 }
 
-html::-webkit-scrollbar-thumb {
-  border-radius: 5px;
+.routes-container.dark::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #cccccc;
 }
