--- a/client/src/pages/HomePage/sections/backgroundsSection.css
+++ b/client/src/pages/HomePage/sections/backgroundsSection.css
@@ -1,32 +1,100 @@
-.backgrounds-section{
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.backgrounds-section {
+  min-height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-    .row-2{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        >p{
-            max-width: 500px;
-            font-size: .9rem;
-            font-weight: 300;
-        }
-        >button{
-            width: fit-content;
-            padding: .4rem 1rem;
-            font-weight: 500;
-            cursor: pointer;
-            font-family: "Inter";
-            border: 1px solid black;
-            border-radius: .5rem;
-            color: black;
-            background: rgb(255, 255, 255);
-        }
+  .wrapper {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1450px;
+    width: 100%;
+    margin: 0 auto;
+    gap: 1rem;
+
+    > label {
+      letter-spacing: 0.3rem;
+      font-size: 0.8rem;
     }
+
+    .row-1 {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .carousel {
+        width: 100%;
+        justify-items: center;
+        display: grid;
+        grid-gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+        > img {
+          aspect-ratio: 14/9;
+          object-fit: cover;
+          max-width: 450px;
+          width: 100%;
+          border-radius: 15px;
+          transition: 0.3s ease-in-out;
+
+          /* &:hover{
+            opacity: 0.7;
+            transition: 0.3s ease-in-out;
+          } */
+        }
+      }
+    }
+
+    .row-2 {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      text-align: center;
+      > p {
+        max-width: 500px;
+        font-size: 0.9rem;
+        font-weight: 300;
+      }
+      > a {
+        margin-bottom: 1rem;
+        width: fit-content;
+        font-size: 0.9rem;
+        padding: 0.4rem 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        font-family: "Inter";
+        border: 1px solid black;
+        border-radius: 0.5rem;
+        color: black;
+        background: rgb(255, 255, 255);
+        transition: 0.2s ease-in-out;
+        text-decoration: none;
+        &:hover {
+          background-color: black;
+          color: white;
+          transition: 0.2s ease-in-out;
+        }
+      }
+    }
+  }
 }
 
-.backgrounds-section.dark{
-    background: radial-gradient(circle, rgb(15, 15, 19) 0%, rgb(10, 10, 10) 100%);
+.backgrounds-section.dark {
+  background: radial-gradient(circle, rgb(21, 21, 29) 0%, rgb(10, 10, 10) 100%);
+  .wrapper .row-2 {
+    > a {
+      background: transparent;
+      color: white;
+      border: 1px solid white;
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
 }
