--- a/client/src/pages/HomePage/sections/contributeSection.css
+++ b/client/src/pages/HomePage/sections/contributeSection.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-image: url('../assets/contribute_bg.png');
+  background-image: url("../assets/contribute_bg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,40 +19,48 @@
     justify-content: flex-end;
     padding: 0rem 1rem;
     > h1 {
-        margin-top: 5rem;
-        font-size: 2.5rem;
-        text-align: center;
+      margin-top: 5rem;
+      font-size: 2.5rem;
+      text-align: center;
       > span {
         color: rgb(152, 102, 247);
       }
     }
-    >p{
-        text-align: center;
-        max-width: 700px;
-        font-size: 1rem;
-        line-height: 1.5rem;
-        font-weight: 300;
+    > p {
+      text-align: center;
+      max-width: 700px;
+      font-size: 1rem;
+      line-height: 1.5rem;
+      font-weight: 300;
     }
-    >button{
-        width: fit-content;
-        padding: .4rem 1rem;
-        font-weight: 500;
-        cursor: pointer;
-        font-family: "Inter";
-        border: 1px solid black;
-        border-radius: .5rem;
+    > a {
+      width: fit-content;
+      padding: 0.4rem 1rem;
+      font-weight: 500;
+      cursor: pointer;
+      font-family: "Inter";
+      border: 1px solid rgb(255, 255, 255);
+      border-radius: 0.5rem;
+      margin-bottom: 2rem;
+      text-decoration: none;
+      font-size: 0.9rem;
+      background-color: transparent;
+      color: white;
+      transition: 0.2s ease-in-out;
+      &:hover {
         color: black;
         background: rgb(255, 255, 255);
-        margin-bottom: 2rem;
+        transition: 0.2s ease-in-out;
+      }
     }
-    >img{
-        max-width: 1100px;
-        border-left: 1px solid rgba(255, 255, 255, 0.555);
-        border-top: 1px solid rgba(255, 255, 255, 0.555);
-        border-right: 1px solid rgba(255, 255, 255, 0.555);
-        border-radius: 10px 10px 0px 0px;
-        filter: drop-shadow(0 0 0.5rem rgba(255, 255, 255, 0.445));
-        width: 100%;
+    > img {
+      max-width: 1100px;
+      border-left: 1px solid rgba(255, 255, 255, 0.555);
+      border-top: 1px solid rgba(255, 255, 255, 0.555);
+      border-right: 1px solid rgba(255, 255, 255, 0.555);
+      border-radius: 10px 10px 0px 0px;
+      filter: drop-shadow(0 0 0.5rem rgba(255, 255, 255, 0.445));
+      width: 100%;
     }
   }
 }
