--- a/client/src/pages/HomePage/sections/songsSection.css
+++ b/client/src/pages/HomePage/sections/songsSection.css
@@ -1,41 +1,122 @@
 .songs-section {
-  height: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  position: relative;
+  justify-content: center;
 
   > label {
-    position: absolute;
-    top: 0;
-    margin: 0 auto;
-    margin: 3rem;
+    margin-top: 3rem;
     letter-spacing: 0.3rem;
     font-size: 0.8rem;
   }
 
-  .row-1 {
+  .wrapper {
+    margin-bottom: 3rem;
     display: flex;
-    gap: 1rem;
-    > p {
-      max-width: 500px;
-      font-size: 0.9rem;
-      font-weight: 300;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 3rem;
+    max-width: 1100px;
+    width: 100%;
+    padding: 1rem;
+
+    .row-1 {
+      display: flex;
+      gap: 2rem;
+      text-align: center;
+      align-items: center;
+      > p {
+        max-width: 400px;
+        font-size: 0.9rem;
+        font-weight: 300;
+      }
+      > a {
+        width: fit-content;
+        padding: 0.4rem 1rem;
+        font-size: .9rem;
+        font-weight: 500;
+        cursor: pointer;
+        font-family: "Inter";
+        border: 1px solid black;
+        border-radius: 0.5rem;
+        color: black;
+        background: rgb(255, 255, 255);
+        transition: 0.2s ease-in-out;
+        text-decoration: none;
+        &:hover{
+          background-color: black;
+          color: white;
+          transition: 0.2s ease-in-out;
+        }
+      }
+      .stats {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+        margin-top: 15%;
+      }
     }
-    > button {
-      width: fit-content;
-      padding: 0.4rem 1rem;
-      font-weight: 500;
-      cursor: pointer;
-      font-family: "Inter";
-      border: 1px solid black;
-      border-radius: 0.5rem;
-      color: black;
-      background: rgb(255, 255, 255);
+    .row-2 {
+      user-select: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      margin: 0 auto;
+      .grid{
+        margin: 0 auto;
+        display: grid;
+        max-width: 650px;
+        width: 100%;
+        grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+        .type {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          padding: 4rem 0rem;
+          max-width: 500px;
+          width: 100%;
+          gap: 1rem;
+          background-color: rgba(182, 155, 255, 0.493);
+          border: 1px solid rgb(255, 255, 255);
+          transition: 0.3s ease-in-out;
+          > svg {
+            width: 4rem;
+            height: 4rem;
+          }
+          &:hover {
+            background-color: rgba(182, 155, 255, 0.26);
+            transition: 0.3s ease-in-out;
+          }
+        }
+      }
     }
   }
 }
 
 .songs-section.dark {
-  background: radial-gradient(circle, rgb(15, 15, 19) 0%, rgb(10, 10, 10) 100%);
+  background: radial-gradient(circle, rgb(21, 21, 29) 0%, rgb(10, 10, 10) 100%);
+  .wrapper .row-2 .grid .type{
+    background-color: rgba(0, 0, 0, 0.075);
+    border: 1px solid rgba(180, 180, 180, 0.151);
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.226);
+      transition: 0.3s ease-in-out;
+    }
+  }
+  .wrapper .row-1{
+    > a{
+      background: transparent;
+      color: white;
+      border: 1px solid white;
+      &:hover{
+        background-color: white;
+        color: black;
+      }
+    }
+  }
 }
